# dataset-crawler

./: README.md  demo_refactored.py  pyproject.toml  pytest.ini
app/: __init__.py  advanced_crawler.py  config.py  example.py  interactive_demo.py  interactive_selector.py  models.py  run_my_config.py  test_ui.py  usage_guide.py  workflow_configurator.py  workflow_examples.py
app/advanced/: __init__.py  advanced_crawler.py  workflow_builder.py
app/core/: __init__.py  config.py  crawler.py
app/examples/: __init__.py  basic_examples.py  interactive_demo.py  usage_guide.py  workflow_examples.py
app/interactive/: __init__.py  browser_manager.py  config_manager.py  configurator.py  demo.py  selector.py  selector_core.py  ui_injector.py
app/tests/: __init__.py  conftest.py  test_advanced_crawler.py  test_config.py  test_crawler.py  test_examples.py  test_integration.py  test_interactive_selector.py  test_real_integration.py  test_runner.py  test_workflow_configurator.py
app/tests/test_html/: product_detail_1.html  product_detail_2.html  products_page.html  products_page_2.html
app/utils/: __init__.py  config_runner.py  test_ui.py
crawler_configs/: A.json
